# cuda-tasks

./: CMakeLists.txt
dot-product/: README.md  dot_product.cuh
gemm-v0/: README.md  gemm.cuh
gemm-v1/: README.md  gemm.cuh
grayscale/: README.md  grayscale.cu
moe-topk/: README.md  moe_topk.cu
moe-topk-hist/: CMakeLists.txt  README.md  moe_topk_hist.cu  moe_topk_hist.cuh  run.cpp  test.cpp
prefix-sum/: CMakeLists.txt  README.md  prefix_sum.cu  prefix_sum.cuh  run.cu  test.cu
quantization/: README.md  quantization.cu
quaternions/: README.md  quaternions.cu
reverse-string/: README.md  reverse.cuh
rms-norm-gated/: CMakeLists.txt  README.md  norm.cu  norm.cuh  run.cpp  test.cpp
softmax-long/: CMakeLists.txt  README.md  run.cpp  softmax.cu  softmax.cuh  test.cpp
transpose-v0/: README.md  transpose.cuh
transpose-v1/: README.md  transpose.cuh
