cmake_minimum_required(VERSION 3.22)
project(ysda-cuda LANGUAGES C CXX CUDA)

set(CMAKE_CXX_STANDARD             20)
set(CMAKE_MODULE_PATH              "${CMAKE_SOURCE_DIR}/tools/cmake")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_EXPORT_COMPILE_COMMANDS  ON)

find_package(Catch REQUIRED)
find_package(CUDAToolkit REQUIRED)

include(tools/cmake/TestSolution.cmake)
include(tools/cmake/BuildFlags.cmake)
add_subdirectory(tools)

function(add_if_exists name)
  if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${name})
    add_subdirectory(${name})
  endif()
endfunction()

add_if_exists(grayscale)
add_if_exists(reverse-string)
add_if_exists(gemm-v0)
add_if_exists(dot-product)
add_if_exists(transpose-v0)
add_if_exists(gemm-v1)
add_if_exists(transpose-v1)
add_if_exists(quantization)
add_if_exists(quaternions)
add_if_exists(moe-topk)
add_if_exists(moe-topk-hist)
add_if_exists(softmax-long)
add_if_exists(prefix-sum)
add_if_exists(rms-norm-gated)

if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/private)
  add_subdirectory(private)
endif()
